traces/bug_50.txt
examples++-load/MetricKuate.cpp:31: error: DEAD_STORE
  The value written to &b (type double) is never used.
Showing all 1 steps of the trace


examples++-load/MetricKuate.cpp:31:43: Write of unused value
29.   R Min (const R a,const R b);
30.   R Max (const R a,const R b);
31.   inline void Exchange (R a,R b) {R c=a;a=b;b=c;};
                                                ^
32.   //const R precision = 1e-10;
33.   
